OPIK-962: Make experiment creation idempotent (#1420)